--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -7,6 +7,7 @@
 {%- import_yaml tplroot ~ "/osfingermap.yaml" as osfingermap %}
 {%- import_yaml tplroot ~ "/osmap.yaml" as osmap %}
 {%- import_yaml tplroot ~ "/osarchmap.yaml" as osarchmap %}
+{%- import_yaml tplroot ~ "/cpuarchmap.yaml" as cpuarchmap %}
 
 {%- set _config = salt['config.get'](tplroot, default={}) %}
 {%- set defaults = salt['grains.filter_by'](
@@ -16,7 +17,9 @@
         merge=salt['grains.filter_by']( osmap, grain='os',
           merge=salt['grains.filter_by']( osfingermap, grain='osfinger',
             merge=salt['grains.filter_by']( osarchmap, grain='osarch',
-              merge=salt['grains.filter_by']( _config, default='lookup'
+              merge=salt['grains.filter_by']( cpuarchmap, grain='cpuarch',
+                merge=salt['grains.filter_by']( _config, default='lookup'
+                )
               )
             )
           )
@@ -32,7 +35,11 @@
     {%- set list = ('client', 'server', 'node', 'k3s') %}
     {%- if c in list and c in d and d[c] and 'pkg' in d[c] and 'version' in d[c] %}
         {%- set p = d[c]['pkg'] %}
-        {%- do p.update({'path': '%s/k8s-%s-%s'|format(d.dir.base, c, d[c]['version'])}) %}
+        {%- if grains.os == 'Windows' %}
+            {%- do p.update({ 'path': '%sbin%s'|format(d.dir.base, d.div) }) %}
+        {%- else %}
+            {%- do p.update({ 'path': '%sk8s-%s-%s%s'|format(d.dir.base, c, d[c]['version'], d.div) }) %}
+        {%- endif %}
 
         {%- if p['use_upstream'] == 'archive' %}
             {%- set uri = '%s/v%s/kubernetes-%s-%s'|format(p['uri_a'], d[c]['version'], c, grains.kernel|lower) %}
@@ -51,7 +58,7 @@
                 {%- set arch = '' if c in ('k3s',) and d.arch == 'amd64' else '-' ~ d.arch %}
                 {%- set url = '%s/v%s/%s%s'|format(p['uri_b'], d[c]['version'], c, arch) %}
             {%- endif %}
-            {%- if url %}
+            {%- if url and 'binary' in p %}
                 {%- do p['binary'].update({ 'name': p.path, 'source': url }) %}
                 {%- set url = url if 'name' not in p else url + '/' + p['name'] %}
                 {%- if not ('source_hash' in p['binary'] or p['binary']['source_hash']) %}
@@ -60,7 +67,6 @@
             {%- endif %}
 
         {%- elif p['use_upstream'] == 'script' %}
-
             {%- if c in ('k3s',) %}
                 {%- set arch = '' if c in ('k3s',) and d.arch == 'amd64' else d.arch %}
                 {%- set uri = '%s/v%s/%s-%s'|format(p['uri_s'], d[c]['version'], c, grains.kernel|lower) %}
@@ -93,7 +99,11 @@
                     {%- set url = False %}
                     {%- if 'pkg' in d[c][i] and j in d[c][i]['pkg'] and d[c][i]['pkg'][j] %}
                         {%- set p = d[c][i]['pkg'][j] %}
-                        {%- do p.update({ 'path': '%s/bin'|format(path) }) %}
+                        {%- if grains.os == 'Windows' %}
+                            {%- do p.update({ 'path': '%sbin%s'|format(d.dir.base, d.div) }) %}
+                        {%- else %}
+                            {%- do p.update({ 'path': '%sk8s-%s-%s-%s%sbin%s'|format(path, c, i, p['version'], d.div, d.div) }) %}
+                        {%- endif %}
 
                         {%- if p['use_upstream'] == 'binary' %}
                             {%- if j in ('ansible-operator', 'helm-operator', 'operator-sdk') %}
@@ -127,7 +137,11 @@
             {%- set url = False %}
             {%- if 'pkg' in d[c] and i in d[c]['pkg'] and 'version' in d[c]['pkg'][i] %}
                 {%- set p = d[c]['pkg'][i] %}
-                {%- do p.update({'path': '%s/k8s-%s-%s-%s'|format(path, c, i, p['version'])}) %}
+                {%- if grains.os == 'Windows' %}
+                    {%- do p.update({ 'path': '%sbin%s'|format(d.dir.base, d.div) }) %}
+                {%- else %}
+                    {%- do p.update({ 'path': '%sk8s-%s-%s-%s%sbin%s'|format(path, c, i, p['version'], d.div, d.div) }) %}
+                {%- endif %}
 
                 {%- if p['use_upstream'] == 'archive' %}
                     {%- if i in ('krew',) %}
@@ -143,8 +157,9 @@
 
                     {%- elif i in ('cue', 'dive') %}
                         {%- set arch = 'x86_64' if i in ('cue',) and d.arch == 'amd64' else d.arch %}
+                        {%- set kernel = 'Windows' if i in ('cue',) and grains.kernel == 'Windows' else grains.kernel|lower %}
                         {%- set uri = '%s/v%s/%s_%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s_%s_%s.%s'|format(uri, grains.kernel|lower, arch, p['suffix']) %}
+                        {%- set url = '%s_%s_%s.%s'|format(uri, kernel, arch, p['suffix']) %}
 
                     {%- elif i in ('kubectx', 'kubens',) %}
                         {%- set arch = 'x86_64' if d.arch in ('x86_64', 'amd64') else d.arch %}
@@ -156,10 +171,11 @@
                         {%- set url = '%s/%s/%s_%s_%s'|format(p['uri_a'], p['version'], i, grains.kernel, arch) %}
 
                     {%- elif i in ('istio',) %}
-                        {%- set kernel = 'osx' if grains.kernel == 'Darwin' else grains.kernel %}
-                        {%- set kernel = 'win' if kernel == 'Windows' else kernel %}
+                        {%- set kernel = 'osx' if grains.kernel == 'Darwin' else grains.kernel|lower %}
+                        {%- set kernel = 'win' if kernel|lower == 'windows' else kernel %}
+                        {%- set arch = '-' ~ d.arch if 'arch' not in p else p.arch %}
                         {%- set uri = '%s/%s/%s-%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s-%s-%s.%s'|format(uri, grains.kernel|lower, d.arch, p['suffix']) %}
+                        {%- set url = '%s-%s%s.%s'|format(uri, kernel, arch, p['suffix']) %}
 
                     {%- elif i in ('octant',) %}
                         {%- set kernel = 'macOS' if grains.kernel == 'Darwin' else grains.kernel %}
@@ -194,23 +210,30 @@
                         {%- set uri = '%s/v%s/kubectl-%s_%s'|format(p['uri_b'], p['version'], i, p['version']) %}
                         {%- set url = '%s_%s_%s'|format(uri, grains.kernel|lower, arch) %}
 
+                    {%- elif i in ('krew',) %}
+                        {%- set url = '%s/v%s/%s.%s'|format(p['uri_b'], p['version'], i, p['suffix']) %}
+
                     {%- elif i in ('kind',) %}
                         {%- set uri = '%s/v%s/%s-%s'|format(p['uri_b'], p['version'], i, grains.kernel|lower) %}
                         {%- set url = '%s-%s'|format(uri, d.arch) %}
 
                     {%- elif i in ('minikube', 'devspace', 'skaffold', 'k3s') %}
-                        {%- set arch = '' if i in ('k3s',) and d.arch == 'amd64' else d.arch %}
-                        {%- set uri = '%s/v%s/%s-%s'|format(p['uri_b'], p['version'], i, grains.kernel|lower) %}
-                        {%- set url = '%s-%s'|format(uri, arch) %}
+                        {%- set kernel = '' if i in ('k3s',) else '-' ~ grains.kernel|lower %}
+                        {%- set arch = '' if i in ('k3s',) and d.arch == 'amd64' else '-' ~ d.arch %}
+                        {%- set suffix = '.' ~ p.suffix if p.suffix else '' %}
+                        {%- set uri = '%s/v%s/%s%s%s%s'|format(p['uri_b'], p['version'], i, grains.kernel|lower, arch, suffix) %}
 
                     {%- elif i in ('linkerd2',) %}
-                        {%- set uri = '%s/edge-%s/%s-cli-edge'|format(p['uri_b'], p['version'], i) %}
-                        {%- set url = '%s-%s-%s'|format(uri, p['version'], grains.kernel|lower) %}
+                        {%- if 'name' in p and p.name %}
+                            {%- set url = '%s/edge-%s/%s'|format(p['uri_b'], p['version'], p.name) %}
+                        {%- else %}
+                            {%- set uri = '%s/edge-%s/%s-cli-edge'|format(p['uri_b'], p['version'], i) %}
+                            {%- set url = '%s-%s-%s'|format(uri, p['version'], grains.kernel|lower) %}
+                        {%- endif %}
                     {%- endif %}
 
-                    {%- if url %}
+                    {%- if url and 'binary' in p %}
                         {%- do p['binary'].update({ 'name': p.path, 'source': url }) %}
-                        {%- set url = url if 'name' not in p else url + '/' + p['name'] %}
                         {%- if 'source_hash' not in p['binary'] %}
                             {%- do p['binary'].update({'source_hash': url ~ '.sha256'}) %}
                         {%- endif %}
@@ -224,4 +247,7 @@
     {%- endif %}
 {%- endfor %}
 
+{%- if 'formula' not in d %}
+    {%- do d.update({'formula': 'kubernetes'}) %}
+{%- endif %}
 {%- set data = d %}
