--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -40,41 +40,43 @@
             {%- do p.update({ 'path': '%s%sbin%s'|format(d.dir.base, d.div, d.div) }) %}
         {%- endif %}
 
-        {%- if p['use_upstream'] == 'archive' %}
+        {%- if p.use_upstream == 'archive' %}
             {%- if grains.os != 'Windows' %}
                 {%- do p.update({ 'path': '%sk8s-%s-%s%s'|format(d.dir.base, c, d[c]['version'], d.div) }) %}
             {%- endif %}
 
-            {%- set uri = '%s/v%s/kubernetes-%s-%s'|format(p['uri_a'], d[c]['version'], c, grains.kernel|lower) %}
-            {%- set url = '%s-%s.%s'|format(uri, d.arch, p['suffix']) %}
-            {%- if not ('source_hash' in p['archive'] or p['archive']['source_hash']) %}
-                {%- do p['archive'].update({'source_hash': url ~ '.sha256'}) %}
+            {%- set uri = '%s/v%s/kubernetes-%s-%s'|format(p.uri_a, d[c]['version'], c, grains.kernel|lower) %}
+            {%- set url = '%s-%s.%s'|format(uri, d.arch, p.suffix) %}
+            {%- do p.archive.update({ 'name': p.path, 'source': url }) %}
+
+            {%- if 'source_hash' in p.archive and p.archive.source_hash %}
+                {%- do p.archive.update({'source_hash': p.archive.source_hash}) %}
+            {%- else %}
+                {%- do p.archive.update({'source_hash': url ~ '.sha256'}) %}
             {%- endif %}
 
-            {%- if url %}
-                {%- do p['archive'].update({ 'name': p.path, 'source': url }) %}
-            {%- endif %}
-
-        {%- elif p['use_upstream'] == 'binary' %}
+        {%- elif p.use_upstream == 'binary' %}
             {%- if grains.os not in ('Windows',) %}
                 {%- do p.update({ 'path': '%sk8s-%s-%s%sbin%s'|format(path, c, d[c]['version'], d.div, d.div) }) %}
             {%- endif %}
             {%- if c in ('client',) %}
-                {%- set url = '%s/%s/bin/%s/%s'|format(p['uri_b'], d[c]['version'], grains.kernel|lower, d.arch) %}
+                {%- set url = '%s/%s/bin/%s/%s'|format(p.uri_b, d[c]['version'], grains.kernel|lower, d.arch) %}
             {%- elif c in ('k3s',) %}
                 {%- set arch = '' if c in ('k3s',) and d.arch == 'amd64' else '-' ~ d.arch %}
-                {%- set url = '%s/%s/%s%s'|format(p['uri_b'], d[c]['version'], c, arch) %}
+                {%- set url = '%s/%s/%s%s'|format(p.uri_b, d[c]['version'], c, arch) %}
             {%- endif %}
-
             {%- if url %}
-                {%- do p['binary'].update({ 'name': p.path, 'source': url }) %}
-                {%- set url = url if 'name' not in p else url + '/' + p['name'] %}
-                {%- if not ('source_hash' in p['binary'] or p['binary']['source_hash']) %}
-                    {%- do p['binary'].update({'source_hash': url ~ '.sha256'}) %}
+                {%- set url = url if 'name' not in p else url + '/' + p.name %}
+                {%- do p.binary.update({ 'name': p.path, 'source': url }) %}
+
+                {%- if 'source_hash' in p.binary and p.binary.source_hash %}
+                    {%- do p.binary.update({'source_hash': p.binary.source_hash}) %}
+                {%- else %}
+                    {%- do p.binary.update({'source_hash': url ~ '.sha256'}) %}
                 {%- endif %}
             {%- endif %}
 
-        {%- elif p['use_upstream'] == 'script' %}
+        {%- elif p.use_upstream == 'script' %}
             {%- do p.update({ 'path': '%sk8s-%s-%s%s'|format(d.dir.base, c, d[c]['version'], d.div) }) %}
 
             {%- if grains.os not in ('Windows',) %}
@@ -83,15 +85,17 @@
 
             {%- if c in ('k3s',) %}
                 {%- set arch = '' if c in ('k3s',) and d.arch == 'amd64' else d.arch %}
-                {%- set uri = '%s/v%s/%s-%s'|format(p['uri_s'], d[c]['version'], c, grains.kernel|lower) %}
+                {%- set uri = '%s/v%s/%s-%s'|format(p.uri_s, d[c]['version'], c, grains.kernel|lower) %}
                 {%- set url = '%s-%s'|format(uri, arch) %}
             {%- endif %}
-
             {%- if url %}
-                {%- do p['script'].update({ 'name': p.path, 'source': url }) %}
-                {%- set url = url if 'name' not in p else url + '/' + p['name'] %}
-                {%- if 'source_hash' not in p['script'] %}
-                    {%- do p['script'].update({'source_hash': url ~ '.sha256'}) %}
+                {%- do p.script.update({ 'name': p.path, 'source': url }) %}
+                {%- set url = url if 'name' not in p else url + '/' + p.name %}
+
+                {%- if 'source_hash' in p.script and p.script.source_hash %}
+                    {%- do p.script.update({'source_hash': p.script.source_hash}) %}
+                {%- else %}
+                    {%- do p.script.update({'source_hash': url ~ '.sha256'}) %}
                 {%- endif %}
             {%- endif %}
         {%- endif %}
@@ -111,27 +115,32 @@
                 {%- for j in d[c][i]['wanted'] %}
                     {%- set url = False %}
                     {%- if 'pkg' in d[c][i] and j in d[c][i]['pkg'] and d[c][i]['pkg'][j] %}
-
                         {%- set p = d[c][i]['pkg'][j] %}
+
                         {%- if grains.os in ('Windows',) %}
                             {%- do p.update({ 'path': '%s%sbin%s'|format(d.dir.base, d.div, d.div) }) %}
                         {%- endif %}
 
-                        {%- if p['use_upstream'] == 'binary' %}
+                        {%- if p.use_upstream == 'binary' %}
                             {%- if grains.os not in ('Windows',) %}
-                                {%- do p.update({ 'path': '%sk8s-%s-%s-%s-%s%sbin%s'|format(path, c, i, j, p['version'], d.div, d.div) }) %}
+                                {%- do p.update({ 'path': '%sk8s-%s-%s-%s-%s%sbin%s'|format(path, c, i, j, p.version, d.div, d.div) }) %}
                             {%- endif %}
 
                             {%- if j in ('ansible-operator', 'helm-operator', 'operator-sdk') %}
                                 {%- set kernel = 'apple-darwin' if grains.kernel|lower == 'darwin' else grains.kernel %}
                                 {%- set kernel = 'linux-gnu' if grains.kernel|lower == 'linux' else grains.kernel %}
                                 {%- set arch = 'x86_64' if d.arch|lower == 'amd64' else d.arch %}
-                                {%- set uri = '%s/v%s/%s-v%s'|format(p['uri_b'], p['version'], j, p['version']) %}
+                                {%- set uri = '%s/v%s/%s-v%s'|format(p.uri_b, p.version, j, p.version) %}
                                 {%- set url = '%s-%s-%s'|format(uri, arch, kernel) %}
                             {%- endif %}
                             {%- if url %}
-                                {%- do p['binary'].update({ 'name': p.path, 'source': url }) %}
-                                {%- do p['binary'].update({ 'source_hash': url ~ '.asc'}) %}
+                                {%- do p.binary.update({ 'name': p.path, 'source': url }) %}
+
+                                {%- if 'source_hash' in p.binary and p.binary.source_hash %}
+                                    {%- do p.binary.update({ 'source_hash': p.binary.source_hash}) %}
+                                {%- else %}
+                                    {%- do p.binary.update({ 'source_hash': url ~ '.asc'}) %}
+                                {%- endif %}
                             {%- endif %}
                         {%- endif %}
 
@@ -152,114 +161,119 @@
             {%- set url = False %}
             {%- if 'pkg' in d[c] and i in d[c]['pkg'] and 'version' in d[c]['pkg'][i] %}
                 {%- set p = d[c]['pkg'][i] %}
+
                 {%- if grains.os in ('Windows',) %}
                     {%- do p.update({ 'path': '%s%sbin%s'|format(d.dir.base, d.div, d.div) }) %}
                 {%- endif %}
 
-                {%- if p['use_upstream'] == 'archive' %}
+                {%- if p.use_upstream == 'archive' %}
                     {%- if i in ('krew',) %}
-                        {%- set url = '%s/v%s/%s.%s'|format(p['uri_a'], p['version'], i, p['suffix']) %}
+                        {%- set url = '%s/v%s/%s.%s'|format(p.uri_a, p.version, i, p.suffix) %}
 
                     {%- elif i in ('audit2rbac',) %}
-                        {%- set uri = '%s/v%s/%s-%s'|format(p['uri_a'], p['version'], i, grains.kernel|lower) %}
-                        {%- set url = '%s-%s.%s'|format(uri, d.arch, p['suffix']) %}
+                        {%- set uri = '%s/v%s/%s-%s'|format(p.uri_a, p.version, i, grains.kernel|lower) %}
+                        {%- set url = '%s-%s.%s'|format(uri, d.arch, p.suffix) %}
 
                     {%- elif i in ('kubebuilder',) %}
-                        {%- set uri = '%s/v%s/%s_%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s_%s_%s.%s'|format(uri, grains.kernel|lower, d.arch, p['suffix']) %}
+                        {%- set uri = '%s/v%s/%s_%s'|format(p.uri_a, p.version, i, p.version) %}
+                        {%- set url = '%s_%s_%s.%s'|format(uri, grains.kernel|lower, d.arch, p.suffix) %}
 
                     {%- elif i in ('cue', 'dive') %}
                         {%- set arch = 'x86_64' if i in ('cue',) and d.arch == 'amd64' else d.arch %}
                         {%- set kernel = 'Windows' if i in ('cue',) and grains.kernel == 'Windows' else grains.kernel|lower %}
-                        {%- set uri = '%s/v%s/%s_%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s_%s_%s.%s'|format(uri, kernel, arch, p['suffix']) %}
+                        {%- set uri = '%s/v%s/%s_%s'|format(p.uri_a, p.version, i, p.version) %}
+                        {%- set url = '%s_%s_%s.%s'|format(uri, kernel, arch, p.suffix) %}
 
                     {%- elif i in ('kubectx', 'kubens',) %}
                         {%- set arch = 'x86_64' if d.arch in ('x86_64', 'amd64') else d.arch %}
-                        {%- set uri = '%s/v%s/%s_v%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s_%s_%s.%s'|format(uri, grains.kernel|lower, arch, p['suffix']) %}
+                        {%- set uri = '%s/v%s/%s_v%s'|format(p.uri_a, p.version, i, p.version) %}
+                        {%- set url = '%s_%s_%s.%s'|format(uri, grains.kernel|lower, arch, p.suffix) %}
 
                     {%- elif i in ('stern',) %}
                         {%- set arch = 'amd64' if i in ('stern',) and d.arch == 'x86_64' else d.arch %}
-                        {%- set url = '%s/%s/%s_%s_%s'|format(p['uri_a'], p['version'], i, grains.kernel, arch) %}
+                        {%- set url = '%s/%s/%s_%s_%s'|format(p.uri_a, p.version, i, grains.kernel, arch) %}
 
                     {%- elif i in ('istio',) %}
                         {%- set kernel = 'osx' if grains.kernel == 'Darwin' else grains.kernel|lower %}
                         {%- set kernel = 'win' if kernel|lower == 'windows' else kernel %}
                         {%- set arch = '-' ~ d.arch if 'arch' not in p else p.arch %}
-                        {%- set uri = '%s/%s/%s-%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s-%s%s.%s'|format(uri, kernel, arch, p['suffix']) %}
+                        {%- set uri = '%s/%s/%s-%s'|format(p.uri_a, p.version, i, p.version) %}
+                        {%- set url = '%s-%s%s.%s'|format(uri, kernel, arch, p.suffix) %}
 
                     {%- elif i in ('octant',) %}
                         {%- set kernel = 'macOS' if grains.kernel == 'Darwin' else grains.kernel %}
                         {%- set arch = '64bit' if d.arch in ('x86_64', 'amd64') else d.arch %}
                         {%- set arch = 'arm' if d.arch|lower in ('arm',) else arch %}
                         {%- set arch = 'arm64' if d.arch|lower in ('arm64',) else arch %}
-                        {%- set uri = '%s/v%s/%s_%s'|format(p['uri_a'], p['version'], i, p['version']) %}
-                        {%- set url = '%s_%s-%s.%s'|format(uri, kernel, arch, p['suffix']) %}
+                        {%- set uri = '%s/v%s/%s_%s'|format(p.uri_a, p.version, i, p.version) %}
+                        {%- set url = '%s_%s-%s.%s'|format(uri, kernel, arch, p.suffix) %}
 
                     {%- elif i in ('java', 'python', 'csharp', 'javascript',) %}
-                        {%- set url = '%s/%s/archive/%s%s.tar.gz'|format(p['uri_a'], i, p['name'], p['version']) %}
+                        {%- set url = '%s/%s/archive/%s%s.tar.gz'|format(p.uri_a, i, p.name, p.version) %}
 
                     {%- elif c in ('operators',) %}
-                        {%- set name = 'v' if 'name' not in p else p['name'] %}
-                        {%- set url = '%s/%s%s.%s'|format(p['uri_a'], name, p['version'], p['suffix']) %}
+                        {%- set name = 'v' if 'name' not in p else p.name %}
+                        {%- set url = '%s/%s%s.%s'|format(p.uri_a, name, p.version, p.suffix) %}
 
                     {%- else %}
-                        {%- set url = '%s/%s%s.%s'|format(p['uri_a'], p['name'], p['version'], p['suffix']) %}
+                        {%- set url = '%s/%s%s.%s'|format(p.uri_a, p.name, p.version, p.suffix) %}
                     {%- endif %}
 
                     {# PATH #}
                     {%- if grains.os != 'Windows' %}
-                        {%- do p.update({ 'path': '%sk8s-%s-%s-%s%s'|format(path, c, i, p['version'], d.div) }) %}
+                        {%- do p.update({ 'path': '%sk8s-%s-%s-%s%s'|format(path, c, i, p.version, d.div) }) %}
                         {%- if i in ('audit2rbac', 'cue', 'dive', 'istio', 'kubens', 'kubectx', 'octant', 'krew') %}
                             {%- do p.update({ 'path': '%s%sbin%s'|format(p.path, d.div, d.div) }) %}
                         {%- endif %}
                     {%- endif %}
 
                     {%- if url %}
-                        {%- do p['archive'].update({ 'name': p.path, 'source': url }) %}
-                        {%- if 'source_hash' not in p['archive'] %}
-                            {%- do p['archive'].update({'source_hash': url ~ '.sha256'}) %}
+                        {%- do p.archive.update({ 'name': p.path, 'source': url }) %}
+                        {%- if 'source_hash' in p.archive and p.archive.source_hash %}
+                            {%- do p.archive.update({'source_hash': p.archive.source_hash}) %}
+                        {%- else %}
+                            {%- do p.archive.update({'source_hash': url ~ '.sha256'}) %}
                         {%- endif %}
                     {%- endif %}
 
-                {%- elif p['use_upstream'] == 'binary' %}
+                {%- elif p.use_upstream == 'binary' %}
                     {%- if grains.os not in ('Windows',) %}
-                        {%- do p.update({ 'path': '%sk8s-%s-%s-%s%sbin%s'|format(path, c, i, p['version'], d.div, d.div) }) %}
+                        {%- do p.update({ 'path': '%sk8s-%s-%s-%s%sbin%s'|format(path, c, i, p.version, d.div, d.div) }) %}
                     {%- endif %}
 
                     {%- if i in ('kudo',) %}
                         {%- set arch = 'x86_64' if d.arch == 'amd64' else d.arch %}
-                        {%- set uri = '%s/v%s/kubectl-%s_%s'|format(p['uri_b'], p['version'], i, p['version']) %}
+                        {%- set uri = '%s/v%s/kubectl-%s_%s'|format(p.uri_b, p.version, i, p.version) %}
                         {%- set url = '%s_%s_%s'|format(uri, grains.kernel|lower, arch) %}
 
                     {%- elif i in ('kind',) %}
-                        {%- set uri = '%s/v%s/%s-%s'|format(p['uri_b'], p['version'], i, grains.kernel|lower) %}
+                        {%- set uri = '%s/v%s/%s-%s'|format(p.uri_b, p.version, i, grains.kernel|lower) %}
                         {%- set url = '%s-%s'|format(uri, d.arch) %}
 
                     {%- elif i in ('minikube', 'devspace', 'skaffold', 'k3s') %}
                         {%- set kernel = '' if i in ('k3s',) else '-' ~ grains.kernel|lower %}
                         {%- set arch = '' if i in ('k3s',) and d.arch == 'amd64' else '-' ~ d.arch %}
                         {%- set suffix = '.' ~ p.suffix if p.suffix else '' %}
-                        {%- set url = '%s/v%s/%s-%s%s%s'|format(p['uri_b'], p['version'], i, grains.kernel|lower, arch, suffix) %}
+                        {%- set url = '%s/v%s/%s-%s%s%s'|format(p.uri_b, p.version, i, grains.kernel|lower, arch, suffix) %}
 
                     {%- elif i in ('stern',) %}
                         {%- set suffix = '.' ~ p.suffix if p.suffix else '' %}
                         {%- set arch = 'amd64' if i in ('stern',) and d.arch == 'x86_64' else d.arch %}
-                        {%- set url = '%s/%s/%s_%s_%s%s'|format(p['uri_b'], p['version'], i, grains.kernel, arch, suffix) %}
+                        {%- set url = '%s/%s/%s_%s_%s%s'|format(p.uri_b, p.version, i, grains.kernel, arch, suffix) %}
 
                     {%- elif i in ('linkerd2',) %}
                         {%- set arch = '' if grains.kernel|lower != 'linux' else '-' ~ d.arch %}
                         {%- set suffix = '.' ~ p.suffix if p.suffix else '' %}
-                        {%- set uri = '%s/edge-%s/linkerd2-cli-edge'|format(p['uri_b'], p['version']) %}
-                        {%- set url = '%s-%s-%s%s%s'|format(uri, p['version'], grains.kernel|lower, arch, suffix) %}
+                        {%- set uri = '%s/edge-%s/linkerd2-cli-edge'|format(p.uri_b, p.version) %}
+                        {%- set url = '%s-%s-%s%s%s'|format(uri, p.version, grains.kernel|lower, arch, suffix) %}
                     {%- endif %}
-
                     {%- if url %}
-                        {%- do p['binary'].update({ 'name': p.path, 'source': url }) %}
-                        {%- if 'source_hash' not in p['binary'] %}
-                            {%- do p['binary'].update({'source_hash': url ~ '.sha256'}) %}
+                        {%- do p.binary.update({ 'name': p.path, 'source': url }) %}
+
+                        {%- if 'source_hash' in p.binary and p.binary.source_hash %}
+                            {%- do p.binary.update({'source_hash': p.binary.source_hash}) %}
+                        {%- else %}
+                            {%- do p.binary.update({'source_hash': url ~ '.sha256'}) %}
                         {%- endif %}
                     {%- endif %}
                 {%- endif %}
