refactor(k3s): add sha256sum endpoint for k3s script install

--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -95,7 +95,7 @@
                 {%- if 'source_hash' in p.script and p.script.source_hash %}
                     {%- do p.script.update({'source_hash': p.script.source_hash}) %}
                 {%- else %}
-                    {%- do p.script.update({'source_hash': url ~ '.sha256'}) %}
+                    {%- do p.script.update({'source_hash': '%s/%s'|format(p.uri_s, 'sha256') }) %}
                 {%- endif %}
             {%- endif %}
         {%- endif %}
