refactor(jinja): remove excessive jinja

--- a/kubernetes/map.jinja
+++ b/kubernetes/map.jinja
@@ -152,9 +152,9 @@
         {%- endfor %}
     {%- endif %}
 
-    ## SIGS / DEVTOOLS / DEVLIBS / OPERATORS ##
+    ## SIGS / DEVTOOLS / DEVLIBS / OPERATORS / MANAGERS ##
     {%- set path = d.dir.source if c in ('devlibs', 'operators') else d.dir.base %}
-    {%- set list = ('devlibs', 'operators', 'sigs', 'devtools') %}
+    {%- set list = ('devlibs', 'operators', 'sigs', 'devtools', 'managers') %}
 
     {%- if c in list and c in d and d[c] and 'pkg' in d[c] and d[c]['pkg'] %}
         {%- for i in d[c]['wanted'] %}
@@ -193,6 +193,10 @@
                         {%- set arch = 'amd64' if i in ('stern',) and d.arch == 'x86_64' else d.arch %}
                         {%- set url = '%s/%s/%s_%s_%s'|format(p.uri_a, p.version, i, grains.kernel, arch) %}
 
+                    {%- elif i in ('cri_resource_manager',) %}
+                        {%- set arch = 'x86_64' if i in ('cri_resource_manager',) and d.arch == 'amd64' else d.arch %}
+                        {%- set url = '%s/v%s/%s-%s.%s.%s'|format(p.uri_a, p.version, i|replace('_', '-'), arch, p.suffix) %}
+
                     {%- elif i in ('istio',) %}
                         {%- set kernel = 'osx' if grains.kernel == 'Darwin' else grains.kernel|lower %}
                         {%- set kernel = 'win' if kernel|lower == 'windows' else kernel %}
@@ -224,6 +228,8 @@
                         {%- do p.update({ 'path': '%sk8s-%s-%s-%s%s'|format(path, c, i, p.version, d.div) }) %}
                         {%- if i in ('audit2rbac', 'cue', 'dive', 'istio', 'kubens', 'kubectx', 'octant', 'krew') %}
                             {%- do p.update({ 'path': '%s%sbin%s'|format(p.path, d.div, d.div) }) %}
+			{%- elif i in ('cri_resource_manager',) %}
+                            {%- do p.update({ 'path': '/'}) %}
                         {%- endif %}
                     {%- endif %}
 
